--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,6 @@ workflows:
     jobs:
     - deploy-cfn:
         context: 
-          - aws-personal
+          - lab8
         stack-name1: My-Instnace-Scheduler
         stack-name2: My-Custom-Instance-Schedule
